Fix double scrollbar in calendar view
Also correctly indented index.html dom-bind template.
Fixes #2.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,6 +11,10 @@ th {
   font-weight: normal;
 }
 
+#mainContainer.paper-scroll-header-panel {
+  right: -15px;
+}
+
 #paperToggle {
   position: absolute;
   right: 0;
